@@ -80,7 +80,7 @@ skips = ^inc::
 -phase = develop
 -type = suggests
 Dist::Zilla::App::Command::bakeini = 0.001000
-Dist::Zilla::PluginBundle::Author::KENTNL = 2.017002
+Dist::Zilla::PluginBundle::Author::KENTNL = 2.020000
 
 [MinimumPerl / @Author::KENTNL/MinimumPerl]
 
@@ -92,6 +92,9 @@ locate_comment = 1
 
 [MakeMaker / @Author::KENTNL/MakeMaker]
 default_jobs = 10
+
+[Author::KENTNL::RecommendFixes / @Author::KENTNL/Author::KENTNL::RecommendFixes]
+:version = 0.001001
 
 [ReadmeFromPod / @Author::KENTNL/ReadmeFromPod]
 
@@ -153,6 +156,7 @@ modules = Dist::Zilla::App::Command::bakeini
 [Prereqs / @Author::KENTNL/::Role::BundleDeps]
 -phase = develop
 -relationship = requires
+Dist::Zilla::Plugin::Author::KENTNL::RecommendFixes = 0.001001
 Dist::Zilla::Plugin::Authority = 1.006
 Dist::Zilla::Plugin::AutoPrereqs = 0
 Dist::Zilla::Plugin::BumpVersionAfterRelease = 0
