@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.000004
+1.001000
+ [Added / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.003001
 
 1.000003 2014-08-15T21:17:57Z
 
