@@ -1,6 +1,8 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
-1.000004
+1.001000
+ [Changed / test recommends]
+ - Test::More 1.001003 → 1.001006
 
 1.000003 2014-08-15T21:17:57Z
 
